name:                 the-dream
version:              0.1
category:             Web
build-type:           Simple
cabal-version:        >= 1.10

executable the-dream
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:
    Dream.JS
    Dream.HTML
    Dream.CSS
  build-depends:
    base >= 4.8 && < 5
    , transformers
    , text
    , ghcjs-base
  default-language:     Haskell2010
  ghc-options:          -Wall
  js-sources:           jquery/jquery-2.1.4.js
