name:                 jquery
version:              0.1
category:             Web
build-type:           Simple
cabal-version:        >= 1.10

library
  hs-source-dirs:       src
  exposed-modules:      Dream.JQuery
  build-depends:
    base >= 4.8 && < 5
    , ghcjs-base
  default-language:     Haskell2010
  js-sources:           jquery-2.1.4.js
  ghc-options:          -Wall
